Fix text appearance on mobile against new font metrics, also apply CSS best practices for the line-height attribute.

--- a/radicchio.css
+++ b/radicchio.css
@@ -31,7 +31,7 @@ html, body {
 
 #title {
     color:            #7fd74c;
-    font-size:        2em;
+    font-size:        1.95em;
 }
 
 #header #v-bar-h {
@@ -48,7 +48,7 @@ html, body {
 #subtitle {
     line-height:      1;
     color:            #7fd74c;
-    font-size:        .6em;
+    font-size:        .55em;
 }
 
 #navbar            {}
@@ -125,7 +125,7 @@ h3 code {
 p {
     margin:           0px 20px 0px;
     padding:          0px 10px 14px;
-    line-height:      1.3em;
+    line-height:      1.5;
     text-align:       justify;
 }
 
@@ -146,7 +146,7 @@ p .emoji {
 ul, ol {
     margin:           0px 20px 0px;
     padding:          0px 10px 14px 64px;
-    line-height:      1.3em;
+    line-height:      1.5;
     text-align:       justify;
 }
 
@@ -159,7 +159,7 @@ pre {
     border-radius:    10px;
     padding:          14px;
     overflow:         auto;
-    line-height:      1.3em;
+    line-height:      1.3;
     background-color: #5db52a;
 }
 
@@ -284,7 +284,7 @@ pre {
     border:           1px solid #3b9308;
     border-radius:    10px;
     padding:          8px;
-    line-height:      1.3em;
+    line-height:      1.3;
     background-color: #cdefed;
 }
 
